logs/statelessd.log
Listing '.'...
Listing './bin'...
Compiling './bin/rst2html.py'...
Compiling './bin/rst2html4.py'...
Compiling './bin/rst2html5.py'...
Compiling './bin/rst2latex.py'...
Compiling './bin/rst2man.py'...
Compiling './bin/rst2odt.py'...
Compiling './bin/rst2odt_prepstyles.py'...
Compiling './bin/rst2pseudoxml.py'...
Compiling './bin/rst2s5.py'...
Compiling './bin/rst2xetex.py'...
Compiling './bin/rst2xml.py'...
Compiling './bin/rstpep2html.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/clihelper'...
Compiling './lib/python3.5/site-packages/clihelper/initialize.py'...
***   File "./lib/python3.5/site-packages/clihelper/initialize.py", line 252
    DEFAULT_MODE = 0755
                      ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/clihelper-1.7.6.egg-info'...
Listing './lib/python3.5/site-packages/daemon'...
Listing './lib/python3.5/site-packages/docutils'...
Listing './lib/python3.5/site-packages/docutils/languages'...
Listing './lib/python3.5/site-packages/docutils/parsers'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/directives'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/include'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/languages'...
Listing './lib/python3.5/site-packages/docutils/readers'...
Listing './lib/python3.5/site-packages/docutils/transforms'...
Listing './lib/python3.5/site-packages/docutils/utils'...
Listing './lib/python3.5/site-packages/docutils/utils/math'...
Listing './lib/python3.5/site-packages/docutils/writers'...
Listing './lib/python3.5/site-packages/docutils/writers/html4css1'...
Listing './lib/python3.5/site-packages/docutils/writers/html5_polyglot'...
Listing './lib/python3.5/site-packages/docutils/writers/latex2e'...
Listing './lib/python3.5/site-packages/docutils/writers/odf_odt'...
Listing './lib/python3.5/site-packages/docutils/writers/pep_html'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/big-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/big-white'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/default'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/medium-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/medium-white'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/small-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/small-white'...
Listing './lib/python3.5/site-packages/docutils/writers/xetex'...
Listing './lib/python3.5/site-packages/docutils-0.14.dist-info'...
Listing './lib/python3.5/site-packages/ipaddr-2.2.0.egg-info'...
Listing './lib/python3.5/site-packages/lockfile'...
Listing './lib/python3.5/site-packages/lockfile-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_daemon-2.1.2.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tinman'...
Listing './lib/python3.5/site-packages/tinman/auth'...
Compiling './lib/python3.5/site-packages/tinman/auth/digest.py'...
***   File "./lib/python3.5/site-packages/tinman/auth/digest.py", line 57
    print "A2 GOT BAD VALUE FOR 'qop': %s\n" % self.params['qop']
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tinman/auth/ldapauth.py'...
***   File "./lib/python3.5/site-packages/tinman/auth/ldapauth.py", line 43
    except ldap.INVALID_CREDENTIALS, ldap.UNWILLING_TO_PERFORM:
                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tinman/decorators'...
Listing './lib/python3.5/site-packages/tinman/handlers'...
Listing './lib/python3.5/site-packages/tinman/loaders'...
Listing './lib/python3.5/site-packages/tinman/session'...
Compiling './lib/python3.5/site-packages/tinman/session/__init__.py'...
***   File "./lib/python3.5/site-packages/tinman/session/__init__.py", line 342
    os.makedirs(path, 0755)
                         ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/tinman/utilities'...
Compiling './lib/python3.5/site-packages/tinman/utilities/heapy_report.py'...
***   File "./lib/python3.5/site-packages/tinman/utilities/heapy_report.py", line 21
    print ''.join(parts)
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tinman/utilities/initialize.py'...
***   File "./lib/python3.5/site-packages/tinman/utilities/initialize.py", line 18
    DEFAULT_MODE = 0755
                      ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/static/dir'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-4.5.3.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
